--- a/InfoApp/app/build.gradle
+++ b/InfoApp/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.1' //底部导航所需要的依赖
     implementation 'androidx.viewpager:viewpager:1.0.0' //页面切换依赖
-
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
