--- a/InfoApp/app/build.gradle
+++ b/InfoApp/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //implementation 'androidx.recyclerview.recyclerview:1.0.0'
-
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation'com.android.tools.build:gradle:2.1.0'
+    //implementation'com.github.clans:fab.FloatingActionButton'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
