--- a/InfoApp/app/build.gradle
+++ b/InfoApp/app/build.gradle
@@ -32,6 +32,14 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.1' //底部导航所需要的依赖
     implementation 'androidx.viewpager:viewpager:1.0.0' //页面切换依赖
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // 下拉刷新效果依赖
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'cn.bingoogolapple:bga-refreshlayout-androidx:2.0.0@aar'
+
+    implementation 'com.github.bumptech.glide:glide:3.8.0'  // Glide图片加载框架
+
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     testImplementation 'junit:junit:4.12'
