--- a/InfoApp/app/build.gradle
+++ b/InfoApp/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:3.8.0'  // Glide图片加载框架
 
+    implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     testImplementation 'junit:junit:4.12'
