--- a/InfoApp/app/src/main/AndroidManifest.xml
+++ b/InfoApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".view.activity.NewsActivity"/>
         <activity android:name=".view.activity.ChatActivity"/>
         <activity android:name="com.cuc.infoapp.view.activity.MainActivity">
             <intent-filter>
