--- a/InfoApp/app/src/main/AndroidManifest.xml
+++ b/InfoApp/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.activity.MovieActivity">
-        </activity>
+        <activity android:name=".view.activity.MovieActivity"></activity>
         <activity android:name=".view.activity.ChatActivity" />
         <activity android:name=".view.activity.MainActivity">
             <intent-filter>
