--- a/InfoApp/app/build.gradle
+++ b/InfoApp/app/build.gradle
@@ -21,6 +21,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+
+        sourceCompatibility JavaVersion.VERSION_1_8
+
+        targetCompatibility JavaVersion.VERSION_1_8
+
+    }
 }
 
 dependencies {
@@ -37,10 +45,14 @@ dependencies {
     // 下拉刷新效果依赖
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'cn.bingoogolapple:bga-refreshlayout-androidx:2.0.0@aar'
-
     implementation 'com.github.bumptech.glide:glide:3.8.0'  // Glide图片加载框架
+    //noinspection GradleCompatible
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //implementation 'androidx.recyclerview.recyclerview:1.0.0'
     implementation 'com.github.clans:fab:1.6.4'
+
+    //implementation'com.github.clans:fab.FloatingActionButton'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     testImplementation 'junit:junit:4.12'
