--- a/InfoApp/app/src/main/AndroidManifest.xml
+++ b/InfoApp/app/src/main/AndroidManifest.xml
@@ -12,10 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".view.activity.NewsActivity"/>
-        <activity android:name=".view.activity.MovieActivity"/>
-        <activity android:name=".view.activity.ChatActivity" />
         <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.HomeActivity"/>
+        <activity android:name=".view.activity.ChatActivity" /> <!-- <activity android:name=".view.activity.HomeActivity"/> -->
+        <activity android:name=".view.activity.NewsActivity" />
+        <activity android:name=".view.activity.MovieActivity" />
     </application>
 
 </manifest>
