--- a/InfoApp/app/src/main/AndroidManifest.xml
+++ b/InfoApp/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.HomeActivity"/>
-        <activity android:name=".view.activity.ChatActivity" /> <!-- <activity android:name=".view.activity.HomeActivity"/> -->
+        <activity android:name=".view.activity.ChatActivity" />
         <activity android:name=".view.activity.NewsActivity" />
         <activity android:name=".view.activity.MovieActivity" />
     </application>
