--- a/InfoApp/app/build.gradle
+++ b/InfoApp/app/build.gradle
@@ -55,6 +55,13 @@ dependencies {
     //implementation'com.github.clans:fab.FloatingActionButton'
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+
+    //百度地图定位
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
+    implementation 'com.afollestad:assent:2.3.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
