--- a/InfoApp/app/src/main/AndroidManifest.xml
+++ b/InfoApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.cuc.infoapp">
     <!-- 添加网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
 
     <application
         android:allowBackup="true"
