--- a/InfoApp/app/src/main/AndroidManifest.xml
+++ b/InfoApp/app/src/main/AndroidManifest.xml
@@ -3,16 +3,15 @@
     package="com.cuc.infoapp">
     <!-- 添加网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/rabbit"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/rabbit"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
